# t3d-robotflow-basket

./: .env.example  .gitignore  README.md  main.py  output.json  pyproject.toml  run_web.sh
doc/: adr.md  tasks.md
src/: analyze_image.py  config.py  main.py  models.py  pipeline.py  tracking.py  visualization.py
src/web/: app.py
src/web/static/: index.html
